# ICSA-SHU

./: README.md
2D-TGSA-ADMM/: CMakeLists.txt  README.md
2D-TGSA-ADMM/conf/: admm.conf
2D-TGSA-ADMM/include/: admm_base.h  collective.h  gd.h  lbfgs.h  logistic.h  math_util.h  prob.h  svm.h  sync_admm.h  tron.h
2D-TGSA-ADMM/src/: Makefile  admm  admm.cpp  admm.h  collective.cpp  gd.cpp  lbfgs.cpp  logistic.cpp  math_util.cpp  prob.cpp  properties.cpp  string_util.cpp  svm.cpp  sync_admm.cpp  train.cpp  tron.cpp
2D-THA-ADMM/: CMakeLists.txt  README  README.md  a  a.cpp  roc_auc.csv  roc_auc_old.csv  roc_auc_webspam_128_30.csv
2D-THA-ADMM/conf/: admm_tianhe.conf
2D-THA-ADMM/include/: collective.h  gd.h  lbfgs.h  math_util.h  prob.h  properties.h  (+3 more)
AH-ADMM/: CMakeLists.txt
AH-ADMM/include/: admm.h  admm_comm.h  dcd.h  l2r_lr_fun.h  l2r_lr_fun_multicore_tron.h  math_utils.h  svm.h  tron.h
AH-ADMM/src/: admm.cpp  admm_comm.cpp  dcd.cpp  l2r_lr_fun.cpp  l2r_lr_fun_multicore_tron.cpp  math_utils.cpp  sparse_operator.cpp  svm.cpp  train.cpp  tron.cpp
FIADMM/: CMakeLists.txt  README  group_admm.conf  hostfile
GR-ADMM/: CMakeLists.txt  group_admm.conf  hostfile
GR-ADMM/allreduce/: reduceoperator.h  ringallreduce.h
GR-ADMM/include/: admm_lr_function.h  conf_util.h  differentiable_function.h  gradient_decent_optimizer.h  group_admm.h  lr_tron_optimizer.h  neighbors.h  optimizer.h  prob.h  properties.h  simple_algebra.h  sparse_dataset.h  string_util.h  type_convert.h
GR-ADMM/src/: admm_lr_function.cpp  conf_util.cpp  differentiable_function.cpp  gradient_decent_optimizer.cpp  group_admm.cpp  lr_tron_optimizer.cpp  neighbors.cpp  prob.cpp  properties.cpp  simple_algebra.cpp  sparse_dataset.cpp  string_util.cpp  train.cpp
GR-ADMM/utils/: utils.cpp  utils.h
PSRA-HGADMM/: CMakeLists.txt
PSRA-HGADMM/include/: admm.h  communicator.h  coordinator.h  sparse_allreduce.h
PSRA-HGADMM/include/internal/: group_allreduce.h  ps_allreduce.h  ring_allreduce.h  simple_allreduce.h
PSRA-HGADMM/include/optimizer/: lbfgs_optimizer.h  lr_tron_optimizer.h
PSRA-HGADMM/include/other/: neighbors.h
PSRA-HGADMM/src/: admm.cpp  coordinator.cpp  main.cpp
PSRA-HGADMM/src/data/: sparse_dataset.cpp
PSRA-HGADMM/src/internal/: communicator_singleton.cpp
PSRA-HGADMM/src/math/: simple_algebra.cpp
PSRA-HGADMM/src/optimizer/: admm_lr_function.cpp  gradient_decent_optimizer.cpp  lbfgs_optimizer.cpp  lr_tron_optimizer.cpp
PSRA-HGADMM/src/other/: neighbors.cpp  properties.cpp
SCAC-ADMM/: .run.sh.swp  kdd12_admm_4.sh  news_admm.sh  run.sh  runrun.sh  test.sh
admmdtf-collective/: CMakeLists.txt  README.md  hostfile  mpirun.sh
(+108 files in other folders)
